@@ -17,31 +17,40 @@
 package org.springframework.ai.vectorstore;
 
 import java.io.File;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
+import com.theokanning.openai.client.OpenAiApi;
+import com.theokanning.openai.service.OpenAiService;
 import io.milvus.client.MilvusServiceClient;
 import io.milvus.param.ConnectParam;
 import io.milvus.param.IndexType;
 import io.milvus.param.MetricType;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
+import org.springframework.core.io.DefaultResourceLoader;
 import org.testcontainers.containers.DockerComposeContainer;
 import org.testcontainers.containers.wait.strategy.Wait;
 import org.testcontainers.junit.jupiter.Testcontainers;
+import retrofit2.Retrofit;
+import retrofit2.adapter.rxjava2.RxJava2CallAdapterFactory;
+import retrofit2.converter.jackson.JacksonConverterFactory;
 
-import org.springframework.ai.autoconfigure.openai.OpenAiAutoConfiguration;
+import org.springframework.ai.ResourceUtils;
 import org.springframework.ai.document.Document;
 import org.springframework.ai.embedding.EmbeddingClient;
+import org.springframework.ai.openai.embedding.OpenAiEmbeddingClient;
 import org.springframework.ai.vectorstore.MilvusVectorStore.MilvusVectorStoreConfig;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.SpringBootConfiguration;
-import org.springframework.boot.autoconfigure.AutoConfigurations;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration;
 import org.springframework.boot.test.context.runner.ApplicationContextRunner;
@@ -54,6 +63,7 @@ import static org.assertj.core.api.Assertions.assertThat;
  * @author Christian Tzolov
  */
 @Testcontainers
+@EnabledIfEnvironmentVariable(named = "OPENAI_API_KEY", matches = ".+")
 public class MilvusVectorStoreIT {
 
 	private static DockerComposeContainer milvusContainer;
@@ -61,16 +71,22 @@ public class MilvusVectorStoreIT {
 	private static final File TEMP_FOLDER = new File("target/test-" + UUID.randomUUID().toString());
 
 	private final ApplicationContextRunner contextRunner = new ApplicationContextRunner()
-		.withUserConfiguration(TestApplication.class)
-		.withPropertyValues("spring.ai.openai.apiKey=" + System.getenv("OPENAI_API_KEY"));
+		.withUserConfiguration(TestApplication.class);
 
 	List<Document> documents = List.of(
-			new Document("Spring AI rocks!! Spring AI rocks!! Spring AI rocks!! Spring AI rocks!! Spring AI rocks!!",
-					Collections.singletonMap("meta1", "meta1")),
-			new Document("Hello World Hello World Hello World Hello World Hello World Hello World Hello World"),
-			new Document(
-					"Great Depression Great Depression Great Depression Great Depression Great Depression Great Depression",
-					Collections.singletonMap("meta2", "meta2")));
+			new Document(getText("classpath:/test/data/spring.ai.txt"), Map.of("meta1", "meta1")),
+			new Document(getText("classpath:/test/data/time.shelter.txt")),
+			new Document(getText("classpath:/test/data/great.depression.txt"), Map.of("meta2", "meta2")));
+
+	public static String getText(String uri) {
+		var resource = new DefaultResourceLoader().getResource(uri);
+		try {
+			return resource.getContentAsString(StandardCharsets.UTF_8);
+		}
+		catch (IOException e) {
+			throw new RuntimeException(e);
+		}
+	}
 
 	@BeforeAll
 	public static void beforeAll() {
@@ -99,161 +115,159 @@ public class MilvusVectorStoreIT {
 	}
 
 	@ParameterizedTest(name = "{0} : {displayName} ")
-	@ValueSource(strings = { "L2", "IP" })
+	@ValueSource(strings = { "COSINE", "L2", "IP" })
 	public void addAndSearch(String metricType) {
 
-		contextRunner.withConfiguration(AutoConfigurations.of(OpenAiAutoConfiguration.class))
-			.withPropertyValues("test.spring.ai.vectorstore.milvus.metricType=" + metricType)
-			.run(context -> {
+		contextRunner.withPropertyValues("test.spring.ai.vectorstore.milvus.metricType=" + metricType).run(context -> {
 
-				VectorStore vectorStore = context.getBean(VectorStore.class);
+			VectorStore vectorStore = context.getBean(VectorStore.class);
 
-				resetCollection(vectorStore);
+			resetCollection(vectorStore);
 
-				vectorStore.add(documents);
+			vectorStore.add(documents);
 
-				List<Document> results = vectorStore.similaritySearch("Great", 1);
+			List<Document> results = vectorStore.similaritySearch(SearchRequest.query("Spring").withTopK(1));
 
-				assertThat(results).hasSize(1);
-				Document resultDoc = results.get(0);
-				assertThat(resultDoc.getId()).isEqualTo(documents.get(2).getId());
-				assertThat(resultDoc.getContent()).isEqualTo(
-						"Great Depression Great Depression Great Depression Great Depression Great Depression Great Depression");
-				assertThat(resultDoc.getMetadata()).hasSize(2);
-				assertThat(resultDoc.getMetadata()).containsKey("meta2");
-				assertThat(resultDoc.getMetadata()).containsKey("distance");
+			assertThat(results).hasSize(1);
+			Document resultDoc = results.get(0);
+			assertThat(resultDoc.getId()).isEqualTo(documents.get(0).getId());
+			assertThat(resultDoc.getContent()).contains(
+					"Spring AI provides abstractions that serve as the foundation for developing AI applications.");
+			assertThat(resultDoc.getMetadata()).hasSize(2);
+			assertThat(resultDoc.getMetadata()).containsKeys("meta1", "distance");
 
-				// Remove all documents from the store
-				vectorStore.delete(documents.stream().map(doc -> doc.getId()).toList());
+			// Remove all documents from the store
+			vectorStore.delete(documents.stream().map(doc -> doc.getId()).toList());
 
-				List<Document> results2 = vectorStore.similaritySearch("Hello", 1);
-				assertThat(results2).hasSize(0);
-			});
+			results = vectorStore.similaritySearch(SearchRequest.query("Spring").withTopK(1));
+			assertThat(results).hasSize(0);
+		});
 	}
 
 	@ParameterizedTest(name = "{0} : {displayName} ")
-	@ValueSource(strings = { "L2" })
-	// @ValueSource(strings = { "IP", "L2" })
+	@ValueSource(strings = { "COSINE" })
+	// @ValueSource(strings = { "COSINE", "IP", "L2" })
 	public void searchWithFilters(String metricType) throws InterruptedException {
 
 		// https://milvus.io/docs/json_data_type.md
 
-		final double THRESHOLD_ALL = 0.0;
+		contextRunner.withPropertyValues("test.spring.ai.vectorstore.milvus.metricType=" + metricType).run(context -> {
+			VectorStore vectorStore = context.getBean(VectorStore.class);
 
-		contextRunner.withConfiguration(AutoConfigurations.of(OpenAiAutoConfiguration.class))
-			.withPropertyValues("test.spring.ai.vectorstore.milvus.metricType=" + metricType)
-			.run(context -> {
-				VectorStore vectorStore = context.getBean(VectorStore.class);
+			var bgDocument = new Document("The World is Big and Salvation Lurks Around the Corner",
+					Map.of("country", "BG", "year", 2020));
+			var nlDocument = new Document("The World is Big and Salvation Lurks Around the Corner",
+					Map.of("country", "NL"));
+			var bgDocument2 = new Document("The World is Big and Salvation Lurks Around the Corner",
+					Map.of("country", "BG", "year", 2023));
 
-				var bgDocument = new Document("The World is Big and Salvation Lurks Around the Corner",
-						Map.of("country", "BG", "year", 2020));
-				var nlDocument = new Document("The World is Big and Salvation Lurks Around the Corner",
-						Map.of("country", "NL"));
-				var bgDocument2 = new Document("The World is Big and Salvation Lurks Around the Corner",
-						Map.of("country", "BG", "year", 2023));
+			vectorStore.add(List.of(bgDocument, nlDocument, bgDocument2));
 
-				vectorStore.add(List.of(bgDocument, nlDocument, bgDocument2));
+			List<Document> results = vectorStore.similaritySearch(SearchRequest.query("The World").withTopK(5));
+			assertThat(results).hasSize(3);
 
-				List<Document> results = vectorStore.similaritySearch("The World", 5);
-				assertThat(results).hasSize(3);
+			results = vectorStore.similaritySearch(SearchRequest.query("The World")
+				.withTopK(5)
+				.withSimilarityThresholdAll()
+				.withFilterExpression("country == 'NL'"));
+			assertThat(results).hasSize(1);
+			assertThat(results.get(0).getId()).isEqualTo(nlDocument.getId());
 
-				results = vectorStore.similaritySearch("The World", 5, THRESHOLD_ALL, "country == 'NL'");
-				assertThat(results).hasSize(1);
-				assertThat(results.get(0).getId()).isEqualTo(nlDocument.getId());
+			results = vectorStore.similaritySearch(SearchRequest.query("The World")
+				.withTopK(5)
+				.withSimilarityThresholdAll()
+				.withFilterExpression("country == 'BG'"));
 
-				results = vectorStore.similaritySearch("The World", 5, THRESHOLD_ALL, "country == 'BG'");
-				assertThat(results).hasSize(2);
-				assertThat(results.get(0).getId()).isIn(bgDocument.getId(), bgDocument2.getId());
-				assertThat(results.get(1).getId()).isIn(bgDocument.getId(), bgDocument2.getId());
+			assertThat(results).hasSize(2);
+			assertThat(results.get(0).getId()).isIn(bgDocument.getId(), bgDocument2.getId());
+			assertThat(results.get(1).getId()).isIn(bgDocument.getId(), bgDocument2.getId());
 
-				results = vectorStore.similaritySearch("The World", 5, THRESHOLD_ALL,
-						"country == 'BG' && year == 2020");
-				assertThat(results).hasSize(1);
-				assertThat(results.get(0).getId()).isEqualTo(bgDocument.getId());
-			});
+			results = vectorStore.similaritySearch(SearchRequest.query("The World")
+				.withTopK(5)
+				.withSimilarityThresholdAll()
+				.withFilterExpression("country == 'BG' && year == 2020"));
+
+			assertThat(results).hasSize(1);
+			assertThat(results.get(0).getId()).isEqualTo(bgDocument.getId());
+		});
 	}
 
 	@ParameterizedTest(name = "{0} : {displayName} ")
-	@ValueSource(strings = { "L2", "IP" })
+	@ValueSource(strings = { "COSINE", "L2", "IP" })
 	public void documentUpdate(String metricType) {
 
-		contextRunner.withConfiguration(AutoConfigurations.of(OpenAiAutoConfiguration.class))
-			.withPropertyValues("test.spring.ai.vectorstore.milvus.metricType=" + metricType)
-			.run(context -> {
+		contextRunner.withPropertyValues("test.spring.ai.vectorstore.milvus.metricType=" + metricType).run(context -> {
 
-				VectorStore vectorStore = context.getBean(VectorStore.class);
+			VectorStore vectorStore = context.getBean(VectorStore.class);
 
-				resetCollection(vectorStore);
+			resetCollection(vectorStore);
 
-				Document document = new Document(UUID.randomUUID().toString(), "Spring AI rocks!!",
-						Collections.singletonMap("meta1", "meta1"));
+			Document document = new Document(UUID.randomUUID().toString(), "Spring AI rocks!!",
+					Collections.singletonMap("meta1", "meta1"));
 
-				vectorStore.add(List.of(document));
+			vectorStore.add(List.of(document));
 
-				List<Document> results = vectorStore.similaritySearch("Spring", 5);
+			List<Document> results = vectorStore.similaritySearch(SearchRequest.query("Spring").withTopK(5));
 
-				assertThat(results).hasSize(1);
-				Document resultDoc = results.get(0);
-				assertThat(resultDoc.getId()).isEqualTo(document.getId());
-				assertThat(resultDoc.getContent()).isEqualTo("Spring AI rocks!!");
-				assertThat(resultDoc.getMetadata()).containsKey("meta1");
-				assertThat(resultDoc.getMetadata()).containsKey("distance");
+			assertThat(results).hasSize(1);
+			Document resultDoc = results.get(0);
+			assertThat(resultDoc.getId()).isEqualTo(document.getId());
+			assertThat(resultDoc.getContent()).isEqualTo("Spring AI rocks!!");
+			assertThat(resultDoc.getMetadata()).containsKey("meta1");
+			assertThat(resultDoc.getMetadata()).containsKey("distance");
 
-				Document sameIdDocument = new Document(document.getId(),
-						"The World is Big and Salvation Lurks Around the Corner",
-						Collections.singletonMap("meta2", "meta2"));
+			Document sameIdDocument = new Document(document.getId(),
+					"The World is Big and Salvation Lurks Around the Corner",
+					Collections.singletonMap("meta2", "meta2"));
 
-				vectorStore.add(List.of(sameIdDocument));
+			vectorStore.add(List.of(sameIdDocument));
 
-				results = vectorStore.similaritySearch("FooBar", 5);
+			results = vectorStore.similaritySearch(SearchRequest.query("FooBar").withTopK(5));
 
-				assertThat(results).hasSize(1);
-				resultDoc = results.get(0);
-				assertThat(resultDoc.getId()).isEqualTo(document.getId());
-				assertThat(resultDoc.getContent()).isEqualTo("The World is Big and Salvation Lurks Around the Corner");
-				assertThat(resultDoc.getMetadata()).containsKey("meta2");
-				assertThat(resultDoc.getMetadata()).containsKey("distance");
+			assertThat(results).hasSize(1);
+			resultDoc = results.get(0);
+			assertThat(resultDoc.getId()).isEqualTo(document.getId());
+			assertThat(resultDoc.getContent()).isEqualTo("The World is Big and Salvation Lurks Around the Corner");
+			assertThat(resultDoc.getMetadata()).containsKey("meta2");
+			assertThat(resultDoc.getMetadata()).containsKey("distance");
 
-				vectorStore.delete(List.of(document.getId()));
+			vectorStore.delete(List.of(document.getId()));
 
-			});
+		});
 	}
 
 	@ParameterizedTest(name = "{0} : {displayName} ")
-	@ValueSource(strings = { "L2", "IP" })
+	@ValueSource(strings = { "COSINE", "L2", "IP" })
 	public void searchWithThreshold(String metricType) {
 
-		contextRunner.withConfiguration(AutoConfigurations.of(OpenAiAutoConfiguration.class))
-			.withPropertyValues("test.spring.ai.vectorstore.milvus.metricType=" + metricType)
-			.run(context -> {
+		contextRunner.withPropertyValues("test.spring.ai.vectorstore.milvus.metricType=" + metricType).run(context -> {
 
-				VectorStore vectorStore = context.getBean(VectorStore.class);
+			VectorStore vectorStore = context.getBean(VectorStore.class);
 
-				resetCollection(vectorStore);
+			resetCollection(vectorStore);
 
-				vectorStore.add(documents);
+			vectorStore.add(documents);
 
-				List<Document> fullResult = vectorStore.similaritySearch("Great", 5, 0.0);
+			List<Document> fullResult = vectorStore
+				.similaritySearch(SearchRequest.query("Spring").withTopK(5).withSimilarityThresholdAll());
 
-				List<Float> distances = fullResult.stream()
-					.map(doc -> (Float) doc.getMetadata().get("distance"))
-					.toList();
+			List<Float> distances = fullResult.stream().map(doc -> (Float) doc.getMetadata().get("distance")).toList();
 
-				assertThat(distances).hasSize(3);
+			assertThat(distances).hasSize(3);
 
-				float threshold = (distances.get(0) + distances.get(1)) / 2;
+			float threshold = (distances.get(0) + distances.get(1)) / 2;
 
-				List<Document> results = vectorStore.similaritySearch("Great", 5, (1 - threshold));
+			List<Document> results = vectorStore
+				.similaritySearch(SearchRequest.query("Spring").withTopK(5).withSimilarityThreshold(1 - threshold));
 
-				assertThat(results).hasSize(1);
-				Document resultDoc = results.get(0);
-				assertThat(resultDoc.getId()).isEqualTo(documents.get(2).getId());
-				assertThat(resultDoc.getContent()).isEqualTo(
-						"Great Depression Great Depression Great Depression Great Depression Great Depression Great Depression");
-				assertThat(resultDoc.getMetadata()).containsKey("meta2");
-				assertThat(resultDoc.getMetadata()).containsKey("distance");
+			assertThat(results).hasSize(1);
+			Document resultDoc = results.get(0);
+			assertThat(resultDoc.getId()).isEqualTo(documents.get(0).getId());
+			assertThat(resultDoc.getContent()).contains(
+					"Spring AI provides abstractions that serve as the foundation for developing AI applications.");
+			assertThat(resultDoc.getMetadata()).containsKeys("meta1", "distance");
 
-			});
+		});
 	}
 
 	@SpringBootConfiguration
@@ -281,6 +295,25 @@ public class MilvusVectorStoreIT {
 				.withPort(milvusContainer.getServicePort("standalone", 19530))
 				.build());
 		}
+
+		@Bean
+		public EmbeddingClient embeddingClient() {
+
+			Retrofit retrofit = new Retrofit.Builder().baseUrl("https://api.openai.com")
+				.client(OpenAiService.defaultClient(System.getenv("OPENAI_API_KEY"), Duration.ofSeconds(60)))
+				.addConverterFactory(JacksonConverterFactory.create(OpenAiService.defaultObjectMapper()))
+				.addCallAdapterFactory(RxJava2CallAdapterFactory.create())
+				.build();
+
+			OpenAiApi api = retrofit.create(OpenAiApi.class);
+
+			return new OpenAiEmbeddingClient(new OpenAiService(api), "text-embedding-ada-002");
+		}
+
+		// @Bean
+		// public EmbeddingClient embeddingClient() {
+		// return new TransformersEmbeddingClient();
+		// }
 
 	}
 
